syntax = "proto3";
package exchange;

service Exchange {
  rpc AddQueue (AddQueueReq) returns (AddQueueResp);  
  rpc AddEvent (AddEventReq) returns (AddEventResp);

}

message AddQueueReq {
  string name = 1;
}

message AddQueueResp {}

message AddEventReq {
  string queue_name = 1;
  Event event = 2;
}

message AddEventResp {
  uint64 id = 1;
}

message Event {
  uint64 id = 1;
  bytes data = 2;
  repeated Attribute attributes = 3;
  string status = 4;
}

message Attribute {
  string name = 1;
  string value = 2;
}

message Status {
  oneof data_type {
    Queued queued = 1;
    Running running = 2;
    Complete complete = 3;
    Errored errored = 4;
    MissedHeartbeat missed_heartbeat = 5;
    Timedout timedout = 6;
  }
}

message Queued {}

message Running {}

message Complete {}

message Errored {}

message MissedHeartbeat {}

message Timedout {}

